SalesforceMetaData/metadata/objects/bofc__BOFCProfileExtract__c.object
<CustomObject>
    <fields>
        <fullName>bofc__ApexPermissions1__c</fullName>
        <label>ApexPermissions1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__ApexPermissions2__c</fullName>
        <label>ApexPermissions2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__ApexPermissions__c</fullName>
        <label>ApexPermissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__AppPermissions__c</fullName>
        <label>AppPermissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__ObjectPermissions__c</fullName>
        <label>ObjectPermissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Profile_ID__c</fullName>
        <label>Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__RecordTypeSettings__c</fullName>
        <label>RecordTypeSettings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Unmanaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmanaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__VisualPermissions__c</fullName>
        <label>VisualPermissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__tabVisibilities__c</fullName>
        <label>tabVisibilities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__userPermissions__c</fullName>
        <label>userPermissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BOFCProfileExtract</label>
    <nameField>
        <label>ProfileName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCProfileExtract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>